# swagger.json
@@ -218,7 +218,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}": {
+    "/projects/{project}/namespaces/{namespace}": {
       "delete": {
         "tags": [
           "Resources"
@@ -226,6 +226,12 @@
         "summary": "Delete all resources in namespace.",
         "operationId": "DeleteAllResourcesInNamespaceHandler",
         "parameters": [
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
           {
             "type": "string",
             "name": "namespace",
@@ -247,7 +253,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/deployments": {
+    "/projects/{project}/namespaces/{namespace}/deployments": {
       "get": {
         "tags": [
           "Deployment"
@@ -276,6 +282,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -333,6 +345,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -370,6 +388,12 @@
         "parameters": [
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -389,7 +413,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}": {
       "get": {
         "tags": [
           "Deployment"
@@ -418,6 +442,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -477,6 +507,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -547,6 +583,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -572,7 +614,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/image": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/image": {
       "put": {
         "tags": [
           "Deployment"
@@ -595,6 +637,12 @@
             "type": "string",
             "name": "X-User-Role",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -634,7 +682,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/replicas": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/replicas": {
       "put": {
         "tags": [
           "Deployment"
@@ -663,6 +711,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -702,7 +756,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/versions": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/versions": {
       "get": {
         "tags": [
           "Deployment"
@@ -735,6 +789,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -763,7 +823,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/versions/{version}": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/versions/{version}": {
       "get": {
         "tags": [
           "Deployment"
@@ -792,6 +852,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -857,6 +923,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -933,6 +1005,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -998,6 +1076,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1029,7 +1113,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/versions/{version}/diff": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/versions/{version}/diff": {
       "post": {
         "tags": [
           "Deployment"
@@ -1037,6 +1121,12 @@
         "summary": "Compare deployment versions with previous version.",
         "operationId": "DiffDeploymentPreviousVersionsHandler",
         "parameters": [
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
           {
             "type": "string",
             "name": "namespace",
@@ -1070,7 +1160,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/deployments/{deployment}/versions/{version}/diff/{version2}": {
+    "/projects/{project}/namespaces/{namespace}/deployments/{deployment}/versions/{version}/diff/{version2}": {
       "post": {
         "tags": [
           "Deployment"
@@ -1078,6 +1168,12 @@
         "summary": "Compare two deployment versions.",
         "operationId": "DiffDeploymentVersionsHandler",
         "parameters": [
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
           {
             "type": "string",
             "name": "namespace",
@@ -1117,7 +1213,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/ingresses": {
+    "/projects/{project}/namespaces/{namespace}/ingresses": {
       "get": {
         "tags": [
           "Ingress"
@@ -1146,6 +1242,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1203,6 +1305,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1240,6 +1348,12 @@
         "parameters": [
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1259,7 +1373,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/ingresses/{ingress}": {
+    "/projects/{project}/namespaces/{namespace}/ingresses/{ingress}": {
       "get": {
         "tags": [
           "Ingress"
@@ -1288,6 +1402,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1347,6 +1467,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1417,6 +1543,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1442,7 +1574,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/services": {
+    "/projects/{project}/namespaces/{namespace}/services": {
       "get": {
         "tags": [
           "Service"
@@ -1471,6 +1603,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1528,6 +1666,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1565,6 +1709,12 @@
         "parameters": [
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1584,7 +1734,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/services/{service}": {
+    "/projects/{project}/namespaces/{namespace}/services/{service}": {
       "get": {
         "tags": [
           "Service"
@@ -1613,6 +1763,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1672,6 +1828,12 @@
             "type": "string",
             "name": "X-User-Namespace",
             "in": "header",
+            "required": true
+          },
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
             "required": true
           },
           {
@@ -1742,6 +1904,12 @@
           },
           {
             "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
+          {
+            "type": "string",
             "name": "namespace",
             "in": "path",
             "required": true
@@ -1767,7 +1935,7 @@
         "x-method-visibility": "public"
       }
     },
-    "/namespaces/{namespace}/solutions/{solution}/deployments": {
+    "/projects/{project}/namespaces/{namespace}/solutions/{solution}/deployments": {
       "delete": {
         "tags": [
           "Service"
@@ -1775,6 +1943,12 @@
         "summary": "Delete all solution deployments.",
         "operationId": "DeleteAllSolutionDeploymentsHandler",
         "parameters": [
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
           {
             "type": "string",
             "name": "namespace",
@@ -1802,7 +1976,7 @@
         "x-method-visibility": "private"
       }
     },
-    "/namespaces/{namespace}/solutions/{solution}/services": {
+    "/projects/{project}/namespaces/{namespace}/solutions/{solution}/services": {
       "delete": {
         "tags": [
           "Service"
@@ -1810,6 +1984,12 @@
         "summary": "Delete all solution services.",
         "operationId": "DeleteAllSolutionServicesHandler",
         "parameters": [
+          {
+            "type": "string",
+            "name": "project",
+            "in": "path",
+            "required": true
+          },
           {
             "type": "string",
             "name": "namespace",
@@ -1882,10 +2062,6 @@
     }
   },
   "definitions": {
-    "AccessLevel": {
-      "type": "string",
-      "x-go-package": "git.containerum.net/ch/resource-service/vendor/github.com/containerum/kube-client/pkg/model"
-    },
     "AvailableSolution": {
       "description": "AvailableSolution -- solution which user can run",
       "type": "object",
@@ -2649,7 +2825,7 @@
       ],
       "properties": {
         "access": {
-          "$ref": "#/definitions/AccessLevel"
+          "$ref": "#/definitions/UserGroupAccess"
         },
         "created_at": {
           "description": "creation date in RFC3339 format",
@@ -2897,7 +3073,7 @@
       "type": "object",
       "properties": {
         "access": {
-          "$ref": "#/definitions/AccessLevel"
+          "$ref": "#/definitions/UserGroupAccess"
         },
         "username": {
           "type": "string",
@@ -3327,7 +3503,7 @@
       "type": "object",
       "properties": {
         "access_level": {
-          "$ref": "#/definitions/AccessLevel"
+          "$ref": "#/definitions/UserGroupAccess"
         },
         "username": {
           "type": "string",
@@ -3380,7 +3556,8 @@
       "x-go-package": "git.containerum.net/ch/resource-service/vendor/github.com/containerum/kube-client/pkg/model"
     },
     "UserGroupAccess": {
-      "type": "string",
+      "type": "integer",
+      "format": "uint64",
       "x-go-package": "git.containerum.net/ch/resource-service/vendor/github.com/containerum/kube-client/pkg/model"
     },
     "UserGroupMember": {
@@ -3439,10 +3616,7 @@
       ],
       "properties": {
         "access": {
-          "description": "one of: \"owner\", \"read\", \"write\", \"read-delete\", \"none\"",
-          "type": "string",
-          "x-go-name": "Access",
-          "$ref": "#/definitions/AccessLevel"
+          "$ref": "#/definitions/UserGroupAccess"
         },
         "id": {
           "description": "hosting-internal name",
@@ -3550,7 +3724,7 @@
       "type": "object",
       "properties": {
         "access": {
-          "$ref": "#/definitions/AccessLevel"
+          "$ref": "#/definitions/UserGroupAccess"
         },
         "access_mode": {
           "$ref": "#/definitions/PersistentVolumeAccessMode"
